--- a/index.html
+++ b/index.html
@@ -13,100 +13,87 @@
   </head>
   <body>
     <br />
-    <br />
-
-    <div id="top" class="main">
-      <div class="container-1">
-        <div class="about">
-          <div class="picture">
-            <img class="pp" src="images/pp.jpg" alt="" />
-            <div class="aboutmetext">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque,
-              quae, nesciunt harum neque quia, voluptate eligendi cum molestiae
-              omnis ipsum possimus modi laudantium! Ipsa quo consequatur a
-              incidunt earum iusto. Lorem ipsum dolor sit, amet consectetur
-              adipisicing elit. Eaque, quae, nesciunt harum neque quia,
-              voluptate eligendi cum molestiae. Lorem ipsum dolor sit, amet
-              consectetur adipisicing elit. Eaque, quae, nesciunt harum neque
-              quia, voluptate eligendi cum molestiae omnis ipsum possimus modi
-              laudantium! Ipsa quo consequatur a incidunt earum iusto. Lorem
-              ipsum dolor sit, amet consectetur adipisicing elit. Eaque, quae,
-              nesciunt harum neque quia, voluptate eligendi cum molestiae. Lorem
-              ipsum dolor sit, amet consectetur adipisicing elit. Eaque, quae,
-              nesciunt harum neque quia, voluptate eligendi cum molestiae omnis
-              ipsum possimus modi laudantium! Ipsa quo consequatur a incidunt
-              earum iusto. Lorem ipsum dolor sit, amet consectetur adipisicing
-              elit. Eaque, quae, nesciunt harum neque quia, voluptate eligendi
-              cum molestiae.
-            </div>
-          </div>
-        </div>
+    <div id="container-1" class="container-1">
+      <div>
+        <img class="pp" src="images/pp.jpg" alt="" />
       </div>
-      <div class="container-2">
-        <div class="buttons">
-          <div class="CV-Button">
-            <a
-              target="_blank"
-              href="https://drive.google.com/file/d/1GS_xsr80mOvr5xylUD_rSMjDlV0Rx1gV/view?usp=sharing"
-            >
-              <img class="goto" src="images/user.png" alt="" />
-              <br />
-              <br />
-              <div>Curriculum Vitae</div>
-            </a>
-          </div>
+      <p>
+        <text>Hi</text>! I am <blue>Melih</blue>. I write mostly
+        <red>Javascript</red> and <red>.NET Core</red>. I am a
+        <green>Web Developer</green>.
+        <br />
+        <br />
+        I am <text>studying</text> at <blue>Sakarya University</blue> as
+        <green>Computer Engineering</green> Student. And I am
+        <red>3rd Grade</red>. Most of my times are passing with learning and
+        searching.
+      </p>
+    </div>
+
+    <div class="motto">
+      If you don't get any higher then you won't ever get any louder as well! No
+      matter in life or in a music class.
+    </div>
+
+    <div class="container-2">
+      <div class="buttons">
+        <a
+          target="_blank"
+          href="https://drive.google.com/file/d/1GS_xsr80mOvr5xylUD_rSMjDlV0Rx1gV/view?usp=sharing"
+        >
+          <img class="goto" src="images/user.png" alt="" />
           <br />
-          <div>
-            <a id="down" class="links">
-              <img
-                class="goto"
-                target="_blank"
-                src="images/arrow-down-sign-to-navigate.png"
-                alt=""
-              />
-            </a>
-            <a id="up" class="links">
-              <img
-                class="goto"
-                target="_blank"
-                src="images/arrow-up-sign-to-navigate.png"
-                alt=""
-              />
-            </a>
-          </div>
           <br />
-          <div class="links">
-            <a
-              class="links"
+          <div>Curriculum Vitae</div>
+        </a>
+
+        <br />
+        <div>
+          <a id="down" class="links">
+            <img
+              class="goto"
               target="_blank"
-              href="https://www.linkedin.com/in/firatmelih/"
-            >
-              <img class="goto" src="images/linkedin.png" alt="" />
-            </a>
-            <a
-              class="links"
+              src="images/arrow-down-sign-to-navigate.png"
+              alt=""
+            />
+          </a>
+          <a id="up" class="links">
+            <img
+              class="goto"
               target="_blank"
-              href="https://github.com/firatmelih"
-            >
-              <img class="goto" src="images/github.png" alt="" />
-            </a>
-            <a class="links" href="mailto:benmelihmail@gmail.com">
-              <img class="goto" src="images/envelope.png" alt="" />
-            </a>
-          </div>
+              src="images/arrow-up-sign-to-navigate.png"
+              alt=""
+            />
+          </a>
+        </div>
+        <br />
+        <div class="links">
+          <a
+            class="links"
+            target="_blank"
+            href="https://www.linkedin.com/in/firatmelih/"
+          >
+            <img class="goto" src="images/linkedin.png" alt="" />
+          </a>
+          <a class="links" target="_blank" href="https://github.com/firatmelih">
+            <img class="goto" src="images/github.png" alt="" />
+          </a>
+          <a class="links" href="mailto:benmelihmail@gmail.com">
+            <img class="goto" src="images/envelope.png" alt="" />
+          </a>
         </div>
       </div>
     </div>
+
     <br />
     <br /><br />
 
-    <table id="table" class="table table-dark">
+    <table id="table" class="table table-bordered table-hover table-dark">
       <thead>
         <tr>
           <th scope="col">Repositority Name</th>
           <th scope="col">Programming Language</th>
           <th scope="col">Date of Last Commit</th>
-          <th></th>
         </tr>
       </thead>
       <tbody class="table-body"></tbody>
