--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <img class="goto" src="images/user.png" alt="" />
           <br />
           <br />
-          <div>Curriculum Vitae</div>
+          <div class="black">Curriculum Vitae</div>
         </a>
 
         <br />
