--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
         <green>Web Developer</green>.
         <br />
         <br />
-        I am <text>studying</text> at <blue>Sakarya University</blue> as
-        <green>Computer Engineering</green> Student. And I am
-        <red>3rd Grade</red>. Most of my times are passing with learning and
-        searching.
+        I am a <green>third-year</green> <blue>student</blue> of
+        <red>Computer Engineering</red> at <blue>Sakarya University</blue>.
+
+        <br />
+        <br />
+        I spend most of my time learning and looking for information about new
+        technologies.
       </p>
     </div>
 
