--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style/style.css" />
-    <title>Document</title>
+    <title>About Me | Melih FIRAT</title>
   </head>
   <body>
     <br />
