responsive is now at css not js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <br />
-    <div id="container-1" class="container-1">
+    <div id="container-1" class="container-1 normal">
       <div>
         <img class="pp" src="images/pp.jpg" alt="" />
       </div>
