--- a/index.html
+++ b/index.html
@@ -12,25 +12,24 @@
     <title>About Me | Melih FIRAT</title>
   </head>
   <body>
-    <br />
+
     <div id="container-1" class="container-1 normal">
-      <div>
-        <img class="pp" src="images/pp.jpg" alt="" />
-      </div>
+
+        <img src="images/pp.jpg" alt="" />
+
       <p>
         <text>Hi</text>! I am <blue>Melih</blue>. I write mostly
         <red>Javascript</red> and <red>.NET Core</red>. I am a
         <green>Web Developer</green>.
-        <br />
-        <br />
+      </p>
+      <p>
         I am a <green>third-year</green> <blue>student</blue> of
         <red>Computer Engineering</red> at <blue>Sakarya University</blue>.
-
-        <br />
-        <br />
+    </p>  
+     <p>
         I spend most of my time learning and looking for information about new
         technologies.
-      </p>
+     </p>
     </div>
 
     <div class="motto">
