--- a/index.html
+++ b/index.html
@@ -1,122 +1,81 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style/style.css" />
-    <title>About Me | Melih FIRAT</title>
-  </head>
-  <body>
 
-    <div id="container-1" class="container-1 normal">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Melih FIRAT | Portfolio</title>
+    <link rel="stylesheet" href="/assets/css/style.min.css">
+    <link rel="icon" href="flaticon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="flaticon.ico" type="image/x-icon" />
+</head>
 
-        <img src="images/pp.jpg" alt="" />
+<body>
 
-      <p>
-        <text>Hi</text>! I am <blue>Melih</blue>. I write mostly
-        <red>Javascript</red> and <red>.NET Core</red>. I am a
-        <green>Web Developer</green>.
-      </p>
-      <p>
-        I am a <green>third-year</green> <blue>student</blue> of
-        <red>Computer Engineering</red> at <blue>Sakarya University</blue>.
-    </p>  
-     <p>
-        I spend most of my time learning and looking for information about new
-        technologies.
-     </p>
-    </div>
-
-    <div class="motto">
-      If you don't get any higher then you won't ever get any louder as well! No
-      matter in life or in a music class.
-    </div>
-
-    <div class="container-2">
-      <div class="buttons">
-        <a
-          target="_blank"
-          href="https://drive.google.com/file/d/1GS_xsr80mOvr5xylUD_rSMjDlV0Rx1gV/view?usp=sharing"
-        >
-          <img class="goto" src="images/user.png" alt="" />
-          <br />
-          <br />
-          <div class="black">Curriculum Vitae</div>
-        </a>
-
-        <br />
-        <div>
-          <a id="down" class="links">
-            <img
-              class="goto"
-              target="_blank"
-              src="images/arrow-down-sign-to-navigate.png"
-              alt=""
-            />
-          </a>
-          <a id="up" class="links">
-            <img
-              class="goto"
-              target="_blank"
-              src="images/arrow-up-sign-to-navigate.png"
-              alt=""
-            />
-          </a>
+    <header>
+        <nav>
+            <div class="left">Portfolio</div>
+            <div class="right">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Skills</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="side-nav">
+            <img class="side-nav-img" src="./assets/img/left.png" alt="">
         </div>
-        <br />
-        <div class="links">
-          <a
-            class="links"
-            target="_blank"
-            href="https://www.linkedin.com/in/firatmelih/"
-          >
-            <img class="goto" src="images/linkedin.png" alt="" />
-          </a>
-          <a class="links" target="_blank" href="https://github.com/firatmelih">
-            <img class="goto" src="images/github.png" alt="" />
-          </a>
-          <a class="links" href="mailto:benmelihmail@gmail.com">
-            <img class="goto" src="images/envelope.png" alt="" />
-          </a>
-        </div>
-      </div>
-    </div>
+        <section id="welcome">
+            <h1>Welcome</h1>
+            <div class="text">
+                <!-- <p>I am Developer</p> -->
+                <p>I am </p>
+                <p id="typer"></p>
+                <p id="cursor"></p>
+            </div>
+            <div class="buttons">
+                <div class="social">
+                    <a target="_blank" href="https://www.linkedin.com/in/firatmelih/"><img
+                            src="./assets/img/linkedin.png" alt=""></a>
+                    <a target="_blank" href="https://github.com/firatmelih"><img src="./assets/img/github.png"
+                            alt=""></a>
+                    <a href=""><img src="./assets/img/twitter.png" alt=""></a>
+                </div>
+                <a href="#about">
+                    <div class="scroll">
+                        <img class="mouse" src="./assets/img/mouse_empty.png" alt="">
+                        <img class="wheel" src="./assets/img/mosue_wheel.png" alt="">
+                    </div>
+                </a>
+            </div>
+        </section>
+        <section id="about">
+            <div><img src="./assets/img/man-user.png" alt="">
+                <p>about me</p>
+                Get to know about who am I?
+                <a href="">Test</a>
+            </div>
+            <div><img src="./assets/img/id-card.png" alt="">
+                <p>resume</p>
+                Learn more about my education and working history.
+            </div>
+            <div><img src="./assets/img/briefcase.png" alt="">
+                <p>portfolio</p>
+                Check my recent works, and see what can I build.
+            </div>
+            <div><img src="./assets/img/technics.png" alt="">
+                <p>tools</p>
+                See my working tools, have more idea about my skills.
+            </div>
+            </div>
+        </section>
+    </main>
+    <script src="./assets/script/app.js"></script>
+</body>
 
-    <br />
-    <br /><br />
-
-    <table id="table" class="table table-bordered table-hover table-dark">
-      <thead>
-        <tr>
-          <th scope="col">Repositority Name</th>
-          <th scope="col">Programming Language</th>
-          <th scope="col">Date of Last Commit</th>
-        </tr>
-      </thead>
-      <tbody class="table-body"></tbody>
-    </table>
-
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
-    <script src="script/script.js"></script>
-    <script src="script/softwareAPI.js"></script>
-  </body>
 </html>
