--- a/index.html
+++ b/index.html
@@ -81,8 +81,22 @@
             
         </section>
         <div id="hiddens">
-            <div class="hidden-about">Hello World</div>
-            <div class="hidden-resume">Hello World</div>
+            <div class="hidden-about">
+                <h3>about me</h3>
+                <h4>GET TO KNOW ABOUT, WHO AM I?</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores officia fugiat odit quis possimus saepe perspiciatis pariatur quisquam vitae assumenda iusto facere doloremque, labore, quas placeat excepturi corrupti, sapiente repellendus!</p>
+                <p>Hello World! My name is Melih, I am 3rd year Computer Engineering student. </p>
+            </div>
+            <div class="hidden-resume">
+                <div class="left">
+                    LEFT
+                </div>
+                <hr>
+                <div class="right">
+                    RIGHT
+                </div>
+            </div>
+            
             <div class="hidden-portfolio">TEST</div>
             <div class="hidden-tools">TEST</div>
         </div>
