hidden-about debug

--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
         <div class="close-about">
             X
         </div>
+
+       <footer>
+           <div id="contact">
+
+           </div>
+           <div id="links">
+
+           </div>
+           <div id="copyright">
+               
+           </div>
+       </footer>
     </main>
     <script src="./assets/script/app.js"></script>
 </body>
