--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <nav>
-            <div class="left">Portfolio</div>
-            <div class="right">
+            <div class="first">Portfolio</div>
+            <div class="second">
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="#about">About</a></li>
